test/spec/call.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/call.wast:152:38: type mismatch of call result. got void, expected i32
    (func $type-void-vs-num (i32.eqz (call 1)))
                                     ^
assert_invalid error:
  third_party/testsuite/call.wast:159:37: type mismatch of call result. got i64, expected i32
    (func $type-num-vs-num (i32.eqz (call 1)))
                                    ^
assert_invalid error:
  third_party/testsuite/call.wast:167:25: too few parameters to function in call. got 0, expected 1
    (func $arity-0-vs-1 (call 1))
                        ^
assert_invalid error:
  third_party/testsuite/call.wast:174:25: too few parameters to function in call. got 0, expected 2
    (func $arity-0-vs-2 (call 1))
                        ^
assert_invalid error:
  third_party/testsuite/call.wast:181:25: too many parameters to function in call. got 1, expected 0
    (func $arity-1-vs-0 (call 1 (i32.const 1)))
                        ^
assert_invalid error:
  third_party/testsuite/call.wast:188:25: too many parameters to function in call. got 2, expected 0
    (func $arity-2-vs-0 (call 1 (f64.const 2) (i32.const 1)))
                        ^
assert_invalid error:
  third_party/testsuite/call.wast:196:28: too many parameters to function in call. got 3, expected 2
    (func $arity-nop-first (call 1 (nop) (i32.const 1) (i32.const 2)))
                           ^
assert_invalid error:
  third_party/testsuite/call.wast:203:26: too many parameters to function in call. got 3, expected 2
    (func $arity-nop-mid (call 1 (i32.const 1) (nop) (i32.const 2)))
                         ^
assert_invalid error:
  third_party/testsuite/call.wast:210:27: too many parameters to function in call. got 3, expected 2
    (func $arity-nop-last (call 1 (i32.const 1) (i32.const 2) (nop)))
                          ^
assert_invalid error:
  third_party/testsuite/call.wast:218:43: type mismatch in nop. got void, expected i32
    (func $type-first-void-vs-num (call 1 (nop) (i32.const 1)))
                                          ^
assert_invalid error:
  third_party/testsuite/call.wast:225:58: type mismatch in nop. got void, expected i32
    (func $type-second-void-vs-num (call 1 (i32.const 1) (nop)))
                                                         ^
assert_invalid error:
  third_party/testsuite/call.wast:232:42: type mismatch of argument 0 of call. got f64, expected i32
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                         ^
assert_invalid error:
  third_party/testsuite/call.wast:232:56: type mismatch of argument 1 of call. got i32, expected f64
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                                       ^
assert_invalid error:
  third_party/testsuite/call.wast:239:43: type mismatch of argument 0 of call. got i32, expected f64
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                          ^
assert_invalid error:
  third_party/testsuite/call.wast:239:57: type mismatch of argument 1 of call. got f64, expected i32
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                                        ^
assert_invalid error:
  third_party/testsuite/call.wast:249:37: function variable out of range (max 1)
  (module (func $unbound-func (call 1)))
                                    ^
assert_invalid error:
  third_party/testsuite/call.wast:253:35: function variable out of range (max 1)
  (module (func $large-func (call 10001232130000)))
                                  ^^^^^^^^^^^^^^
35/35 tests passed.
;;; STDOUT ;;)
